--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
     <h1>Googleアカウントへの認証</h1>
-    <button id="authorize_button" style="display: none;">認証ボタン</button>
+    <button id="authorize_button" >認証ボタン</button>
     <button id="signout_button" style="display: none;">サインアウト</button>
 </body>
